Initial test code added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,36 +8,33 @@
 
     <EditText
         android:id="@+id/hours"
+        style="@style/inputType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:ems="2"
-        android:digits="0123456789."
-        android:inputType="number"
+        android:hint="@string/hours"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/minutes"
+        style="@style/inputType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:ems="2"
-        android:digits="0123456789."
-        android:inputType="number"
+        android:hint="@string/min"
         app:layout_constraintBottom_toBottomOf="@+id/hours"
         app:layout_constraintStart_toEndOf="@+id/hours"
         app:layout_constraintTop_toTopOf="@+id/hours" />
 
     <EditText
         android:id="@+id/seconds"
+        style="@style/inputType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:ems="2"
-        android:digits="0123456789."
-        android:inputType="number"
+        android:hint="@string/sec"
         app:layout_constraintBottom_toBottomOf="@+id/minutes"
         app:layout_constraintStart_toEndOf="@+id/minutes"
         app:layout_constraintTop_toTopOf="@+id/minutes" />
@@ -47,7 +43,7 @@
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:text="@string/start"
         app:layout_constraintBottom_toBottomOf="@+id/seconds"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/seconds"
