Test Cases and order of the list before submitting to adapter is maintained.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         app:layout_constraintStart_toEndOf="@+id/seconds"
         app:layout_constraintTop_toTopOf="@+id/seconds" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/timerRv"
         android:layout_width="0dp"
@@ -56,6 +57,16 @@
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/running_timer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hours" />
 </androidx.constraintlayout.widget.ConstraintLayout>
